--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -2,6 +2,10 @@
 # Workflow list definition
 # This list describes the order that the Jobs execute. The "main" Job is always
 # executed first, followed in order of the Jobs listed in this Workflow block.
+workflow:
+  # We define the workflow where the "publish" Job is started after the "main" Job.
+  - publish
+
 
 # Shared definition block
 # This is where you would define any attributes that all your jobs will
